Prevents search bar from overtaking mobile menu overlay by adjusting its z-index.

--- a/styleguide/source/_patterns/01-molecules/05-navigation/00-primary-nav/_primary-nav.scss
+++ b/styleguide/source/_patterns/01-molecules/05-navigation/00-primary-nav/_primary-nav.scss
@@ -81,6 +81,13 @@
   }
 }
 
+// Prevent the search bar from overtaking the menu overlay at mobile breakpoints.
+.body-nav-primary-open .page-level-search {
+  @include breakpoint($bp-med-home max-width) {
+    z-index: -1;
+  }
+}
+
 .nav-primary_section-active {
   > .link-nav-primary {
 
